# vector-search-showcase

./: .gitignore  Dockerfile  README.md  compose.yml  example.env  pyproject.toml
app/: interface.py  settings.py
